# micro-risc-emulator

./: .gitignore  CMakeLists.txt  README.md  trace.txt
include/: aluOps.h  emulator.h  input.h  memory.h  mmio.h  terminal.h
include/fault/: faultCodes.h
include/helpers/: aluOps.h  fetch.h
include/memory/: mmio.h
include/opcodes/: alu.h  branch.h  encodings.h  jump.h  li.h  mem.h
src/: emulator.c  input.c  main.c  mmio.c  terminal.c
src/helpers/: aluOps.c  fetch.c
src/memory/: mmio.c
src/opcodes/: alu.c  branch.c  jump.c  li.c  mem.c
tests/: fib.hex  memFib.hex  test1.hex  test2.hex  test3.hex
